--- a/app/src/main/res/layout/activity_vacation_details.xml
+++ b/app/src/main/res/layout/activity_vacation_details.xml
@@ -10,7 +10,7 @@
         android:id="@+id/scrollView2"
         android:layout_width="409dp"
         android:layout_height="200dp"
-        android:background="#00BCD4"
+        android:background="@android:color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         >
@@ -54,25 +54,44 @@
                     android:hint="hotel"></EditText>
             </LinearLayout>
 
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content">-->
+
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="50dp"-->
+<!--                    android:padding="10dp"-->
+<!--                    android:text="Start Date: " />-->
+<!--                -->
+
+<!--                <CalendarView-->
+<!--                    android:id="@+id/startDate"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:padding="8dp"-->
+<!--                    android:layout_marginTop="8dp"-->
+<!--                    android:layout_marginBottom="8dp" />-->
+<!--            </LinearLayout>-->
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:padding="10dp"
-                    android:text="Start Date: " />
-
-                <CalendarView
+                    android:layout_margin="2dp"
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"
+                    android:text="Start date"/>
+                <TextView
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"
+                    android:inputType="none"
                     android:id="@+id/startDate"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp" />
+                    android:drawableRight="@drawable/calendar"/>
             </LinearLayout>
 
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -81,7 +100,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:padding="10dp"
-                    android:text="End Date: " />
+                    android:text="End Date: "
+                    />
 
                 <CalendarView
                     android:id="@+id/endDate"
