--- a/app/src/main/res/layout/activity_vacation_details.xml
+++ b/app/src/main/res/layout/activity_vacation_details.xml
@@ -34,7 +34,7 @@
                     android:id="@+id/titletext"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:hint="vacation 1"></EditText>
+                    android:hint="vacation name"></EditText>
             </LinearLayout>
 
             <LinearLayout
@@ -45,34 +45,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:padding="10dp"
-                    android:text="title: " />
+                    android:text="hotel: " />
 
                 <EditText
                     android:id="@+id/hoteltext"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:hint="hotel"></EditText>
+                    android:hint="hotel name"></EditText>
             </LinearLayout>
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content">-->
-
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="50dp"-->
-<!--                    android:padding="10dp"-->
-<!--                    android:text="Start Date: " />-->
-<!--                -->
-
-<!--                <CalendarView-->
-<!--                    android:id="@+id/startDate"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:padding="8dp"-->
-<!--                    android:layout_marginTop="8dp"-->
-<!--                    android:layout_marginBottom="8dp" />-->
-<!--            </LinearLayout>-->
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -91,27 +71,22 @@
                     android:drawableRight="@drawable/calendar"/>
             </LinearLayout>
 
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:padding="10dp"
-                    android:text="End Date: "
-                    />
-
-                <CalendarView
+                    android:layout_margin="2dp"
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"
+                    android:text="End date"/>
+                <TextView
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"
+                    android:inputType="none"
                     android:id="@+id/endDate"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp" />
+                    android:drawableRight="@drawable/calendar"/>
             </LinearLayout>
-
         </LinearLayout>
     </ScrollView>
 
