--- a/app/src/main/res/layout/excursion_list_item.xml
+++ b/app/src/main/res/layout/excursion_list_item.xml
@@ -10,8 +10,6 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="TextView"
-        tools:layout_editor_absoluteX="237dp"
-        tools:layout_editor_absoluteY="218dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
@@ -20,9 +18,6 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="TextView"
-        tools:layout_editor_absoluteX="293dp"
-        tools:layout_editor_absoluteY="558dp"
-        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView3"
         app:layout_constraintLeft_toLeftOf="@id/textView3"/>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
