--- a/app/src/main/res/layout/excursion_list_item.xml
+++ b/app/src/main/res/layout/excursion_list_item.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
@@ -10,14 +9,17 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:layout_margin="2dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_margin="2dp"
         android:text="TextView"
-        app:layout_constraintTop_toBottomOf="@id/textView3"
-        app:layout_constraintLeft_toLeftOf="@id/textView3"/>
+        app:layout_constraintTop_toTopOf="@id/textView3"
+        app:layout_constraintLeft_toRightOf="@id/textView3"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
