added sharing feature for vacation details

--- a/app/src/main/res/menu/menu_vacation_details.xml
+++ b/app/src/main/res/menu/menu_vacation_details.xml
@@ -7,4 +7,6 @@
     <item android:title="Delete Vacation"
         android:id="@+id/vacationDelete"/>
 
+    <item android:title="Share Vacation Details"
+        android:id="@+id/share"/>
 </menu>
