adjusted menu to seperate notifcation functionality for start and end vacation dates

--- a/app/src/main/res/menu/menu_vacation_details.xml
+++ b/app/src/main/res/menu/menu_vacation_details.xml
@@ -12,5 +12,10 @@
 
     <item android:title="Notify Start Date"
         android:orderInCategory="100"
-        android:id="@+id/notify"/>
+        android:id="@+id/notifyStartDate"/>
+
+
+    <item android:title="Notify End Date"
+        android:orderInCategory="100"
+        android:id="@+id/notifyEndDate"/>
 </menu>
